Add features.md (Contributor 1)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,5 @@
-site_name: Documentation Programming Quotes Max-Titouan-Franck-Armando
+site_name: Documentation Programming Quotes Max-Titouan-Franck-Armando  
+
+nav:
+  - Home: index.md
+  - Features: features.md
