--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
-site_name: Documentation Programming Quotes Max-Titouan-Franck-Armando  
+site_name: Documentation Programming Quotes Max-Titouan-Franck-Armando
 
 nav:
   - Home: index.md
   - Features: features.md
   - Core Functions: functions.md
+  - User Interface: user-interface.md
